--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,5 +27,6 @@
         </div>
       </div>
     </div>
-<%= render partial: "recent_commits", locals: {github_service: @github_service} %>    
+<%= render partial: "recent_commits", locals: {github_service: @github_service} %>
 <%= render partial: "repositories", locals: {github_service: @github_service} %>
+<%= render partial: "organizations", locals: {github_service: @github_service} %>
