Added metrics for followed users

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,6 +27,7 @@
         </div>
       </div>
     </div>
-<%= render partial: "recent_commits", locals: {github_service: @github_service} %>
 <%= render partial: "repositories", locals: {github_service: @github_service} %>
+<%= render partial: "recent_commits", locals: {github_service: @github_service} %>
+<%= render partial: "following_commits", locals: {github_service: @github_service} %>
 <%= render partial: "organizations", locals: {github_service: @github_service} %>
